--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ vars.DOCKERHUB_USERNAME }}/terraform-tools:latest .
+          docker build -t ${{ vars.DOCKERHUB_USERNAME }}/terraform-tools:root-v1 .
 
       - name: Push Docker Image
         run: |
-          docker push ${{ vars.DOCKERHUB_USERNAME }}/terraform-tools:latest
+          docker push ${{ vars.DOCKERHUB_USERNAME }}/terraform-tools:root-v1
